--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.2.24"
+version = "0.2.25"
 edition = "2021"
 rust-version = "1.85.1"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
@@ -77,8 +77,8 @@ name = "cargo-e"
 path = "src/main.rs"
 
 [dependencies]
-e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.21", optional = true }
-e_ai_summarize = { path = "../addendum/e_ai_summarize", version = "0.1.10", optional = true }
+e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.22", optional = true }
+e_ai_summarize = { path = "../addendum/e_ai_summarize", version = "0.1.11", optional = true }
 anyhow = "1.0.97"
 clap = { version = "4.5.31", features = ["derive"] }
 crossterm = { version = "0.29.0", optional = true }
@@ -102,7 +102,7 @@ which = "7.0.2"
 cargo_metadata = "0.19.2"
 regex = "1.11.1"
 open = "5.3.2"
-sysinfo = "0.34.2"
+sysinfo = "0.35.0"
 chrono = "0.4.40"
 nu-ansi-term = "0.50.1"
 walkdir = "2.5.0"
@@ -110,18 +110,19 @@ walkdir = "2.5.0"
 # Optional plugin dependencies
 rhai = { version = "1.21.0", optional = true }
 mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }
-wasmtime = { version = "31.0.0", optional = true }
-wasmtime-wasi = { version = "31", features = ["preview1"], optional = true }
-wasmparser = { version = "0.229.0", optional = true }
+wasmtime = { version = "32.0.0", optional = true }
+wasmtime-wasi = { version = "32.0.0", features = ["preview1"], optional = true }
+wasmparser = { version = "0.230.0", optional = true }
 glob = "0.3.2"
 git2 = "0.20.1"
 comfy-table = "7.1.4"
+
 # scotch-host = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host", version = "0.1.0",optional = true }
 # scotch-guest-macros = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-guest-macros", version = "0.1.0",optional = true }
 # scotch-host-macros  = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host-macros",  version = "0.1.0",optional = true }    
 
 [target.'cfg(unix)'.dependencies]
-nix = "0.29.0"
+nix = { version = "0.30.1", features = ["process","signal"] }
 libc = "0.2.172"
 
 [target.'cfg(windows)'.dependencies]
@@ -129,7 +130,7 @@ windows = { version = "0.61.1", features = ["Win32", "Win32_System_Console", "Wi
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
-genai = "0.2"
+genai = "0.3.0"
 predicate = "0.1.0"
 predicates = "3.1.3"
 regex = "1.11.1"
