--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.2.29"
+version = "0.2.30"
 edition = "2021"
 rust-version = "1.85.1"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
@@ -25,7 +25,7 @@ include = [
 ]
 
 [features]
-default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version","uses_genai"]
+default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version","uses_genai","uses_tts"]
 # not ready for use ,"uses_plugins","uses_rhai"]
 tui = ["crossterm", "ratatui"]
 
@@ -45,6 +45,7 @@ uses_reqwest = ["reqwest"]
 uses_serde = ["serde", "serde_json"]
 uses_paste = ["dep:paste"]
 uses_genai = ["e_ai_summarize"]
+uses_tts   = ["dep:tts"]
 
 # Plugin system support                        
 uses_plugins = ["uses_serde"]
@@ -85,6 +86,7 @@ crossterm = { version = "0.29.0", optional = true }
 ctrlc = "3.4.5"
 futures = "0.3.31"
 paste = { version = "1.0.15", optional = true }
+tts = { version = "0.26.3", optional = true }
 ratatui = { version = "0.29.0", optional = true }
 threadpool = { version = "1.8.1", optional = true }
 toml = "0.8.20"
