--- a/addendum/e_window/Cargo.toml
+++ b/addendum/e_window/Cargo.toml
@@ -2,7 +2,7 @@
 name = "e_window"
 description = "A window tool. Think WinAPI ShowMessageBox; but more than that."
 license = "MIT"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["David Horner"]
 edition = "2021"
 publish = true
@@ -13,8 +13,10 @@ chrono = "0.4.41"
 eframe = {version="0.31.1",features=["persistence","serde"]}
 egui = { version= "0.31.1",features=["persistence","serde","log"]}
 getargs = "0.5.0"
+open = "5.3.2"
 serde = { version = "1.0.219", features = ["derive"] }
 shell-words = "1.1.0"
+snailquote = "0.3.1"
 sysinfo = "0.35.1"
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser"] }
