--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.2.33"
+version = "0.2.34"
 edition = "2021"
 rust-version = "1.85.1"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
@@ -25,34 +25,48 @@ include = [
 ]
 
 [features]
-default = ["tui", "concurrent", "funny-docs","uses_reqwest","uses_serde","check-version","uses_genai","uses_tts"]
+default = [
+    "tui",
+    "concurrent",
+    "funny-docs",
+    "uses_reqwest",
+    "uses_serde",
+    "check-version",
+    "uses_genai",
+    "uses_tts",
+]
 # not ready for use ,"uses_plugins","uses_rhai"]
 tui = ["crossterm", "ratatui"]
 
 check-version = ["check-version-program-start"]
 check-version-program-start = [
-  "dep:e_crate_version_checker",
-  "e_crate_version_checker/uses_reqwest",
-  "e_crate_version_checker/uses_serde",
-  "e_crate_version_checker/changelog"
+    "dep:e_crate_version_checker",
+    "e_crate_version_checker/uses_reqwest",
+    "e_crate_version_checker/uses_serde",
+    "e_crate_version_checker/changelog",
 ]
 
 concurrent = ["dep:threadpool"]
-equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
-funny-docs = ["uses_paste", "e_crate_version_checker/fortune", "e_crate_version_checker/changelog"]
+equivalent = [
+] # alias/shortcut to --example; nothing more - other features will not apply.
+funny-docs = [
+    "uses_paste",
+    "e_crate_version_checker/fortune",
+    "e_crate_version_checker/changelog",
+]
 
 uses_reqwest = ["reqwest"]
 uses_serde = ["serde", "serde_json"]
 uses_paste = ["dep:paste"]
 uses_genai = ["e_ai_summarize"]
-uses_tts   = ["dep:tts"]
+uses_tts = ["dep:tts"]
 
 # Plugin system support                        
 uses_plugins = ["uses_serde"]
-uses_rhai    = ["uses_plugins", "rhai"] 
-uses_lua     = ["uses_plugins", "mlua", "uses_serde"]
+uses_rhai = ["uses_plugins", "rhai"]
+uses_lua = ["uses_plugins", "mlua", "uses_serde"]
 # uses_scotch  = ["uses_plugins", "scotch-guest-macros", "scotch-host-macros","scotch-host"]         
-uses_wasm    = ["uses_plugins", "wasmtime", "wasmtime-wasi","wasmparser"]
+uses_wasm = ["uses_plugins", "wasmtime", "wasmtime-wasi", "wasmparser"]
 
 # equivalent = []  # alias/shortcut to --example; nothing more - other features will not apply.
 # funny-docs = ["uses_paste"]
@@ -78,8 +92,8 @@ name = "cargo-e"
 path = "src/main.rs"
 
 [dependencies]
-e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.25", optional = true }
-e_ai_summarize = { path = "../addendum/e_ai_summarize", version = "0.1.13", optional = true }
+e_crate_version_checker = { path = "../addendum/e_crate_version_checker", version = "0.1.26", optional = true }
+e_ai_summarize = { path = "../addendum/e_ai_summarize", version = "0.1.14", optional = true }
 anyhow = "1.0.97"
 clap = { version = "4.5.31", features = ["derive"] }
 crossterm = { version = "0.29.0", optional = true }
@@ -92,7 +106,10 @@ threadpool = { version = "1.8.1", optional = true }
 toml = "0.8.20"
 tracing = "0.1.41"
 semver = { version = "1.0.26", optional = true }
-reqwest = { version = "0.12.15", optional = true, features = ["blocking", "json"] }
+reqwest = { version = "0.12.15", optional = true, features = [
+    "blocking",
+    "json",
+] }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 serde_json = { version = "1.0", optional = true }
 env_logger = "0.11.7"
@@ -124,11 +141,18 @@ comfy-table = "7.1.4"
 # scotch-host-macros  = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host-macros",  version = "0.1.0",optional = true }    
 
 [target.'cfg(unix)'.dependencies]
-nix = { version = "0.30.1", features = ["process","signal"] }
+nix = { version = "0.30.1", features = ["process", "signal"] }
 libc = "0.2.172"
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.61.1", features = ["Win32", "Win32_System_Console", "Win32_Foundation", "Win32_System_SystemServices","Win32_Security","Win32_Security_Authorization"] }
+windows = { version = "0.61.1", features = [
+    "Win32",
+    "Win32_System_Console",
+    "Win32_Foundation",
+    "Win32_System_SystemServices",
+    "Win32_Security",
+    "Win32_Security_Authorization",
+] }
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
