--- a/cargo-e/Cargo.toml
+++ b/cargo-e/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-e"
-version = "0.2.39"
+version = "0.2.40"
 edition = "2021"
 rust-version = "1.85.1"
 description = "e is for Example. A command-line tool for running and exploring source, examples, and binaries from Rust projects. It will run the first example, if no options are given."
@@ -135,6 +135,8 @@ wasmparser = { version = "0.230.0", optional = true }
 glob = "0.3.2"
 git2 = "0.20.1"
 comfy-table = "7.1.4"
+dashmap = "6.1.0"
+lazy_static = "1.5.0"
 
 # scotch-host = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-host", version = "0.1.0",optional = true }
 # scotch-guest-macros = { git = "https://github.com/davehorner/scotch.git", branch = "feature/long-live-scotch", package = "scotch-guest-macros", version = "0.1.0",optional = true }
